# TasteSongPlayerExplore

./: .gitignore  CMakeLists.txt  README.md  TasteSongExplore02.pro  TasteSongExplore03.pro  basemodel.cpp  basemodel.h  config.cpp  config.h  db.cpp  db.h  dbinit.cpp  dbinit.h  git.pull.test.md  histogramwidget.cpp  histogramwidget.h  lineedit.cpp  lineedit.h  listsearchdialog.cpp  listsearchdialog.h  main.cpp  musicmodel.cpp  musicmodel.h  player.cpp  player.h  playercontrols.cpp  playercontrols.h  playlistmodel.cpp  playlistmodel.h  settingmodel.cpp  settingmodel.h  tools.cpp  tools.h  videowidget.cpp  videowidget.h
